# protocollab

./: .gitignore  .gitmessage.txt  CHANGELOG.md  CONTRIBUTING.md  README.md  README_ru.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-demo.txt  requirements-dev.txt  requirements.txt  setup.py
.githooks/: commit-msg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  reveng-tshark.yml
demo/l2/: README.md  demo.py
demo/l2/tests/: test_demo_l2.py
demo/l3/: README.md  demo.py
demo/l3/tests/: test_demo_l3.py
demo/mock/: README.md  demo.py
demo/mock/tests/: test_demo_mock.py
demo/reveng/: .gitignore  Makefile  README.md
demo/reveng/ip_scoped/: expected.txt  ip_scoped.yaml  sample.pcap
demo/reveng/session_id/: expected.txt  sample.pcap  session_id.yaml
demo/reveng/tls_sni_analysis/: expected.txt  sample.pcap  tls_handshake_mini.yaml  tls_sni.yaml  tls_sni_analysis.yaml
demo/reveng/tls_weak_cipher/: expected.txt  sample.pcap  tls_weak.yaml  tls_weak_cipher.yaml
demo/reveng/tools/: fetch_samples.sh  generate_all.sh  make_samples.py  run_wireshark.sh  test_dissectors.sh
docs/adr/: 001_Replace_Loader_Global_State.md  001_Replace_Loader_Global_State_RU.md  002_Pluggable_JSON_Schema_Validator.md  002_Pluggable_JSON_Schema_Validator_RU.md  003_Separate_YAML_Merge_Submodule.md  003_Separate_YAML_Merge_Submodule_RU.md  004_YAML_Transformation_Library.md  005_ProtoCollab_Architecture.md
docs/adr/ru/: 002_Pluggable_JSON_Schema_Validator_RU.md  003_Separate_YAML_Merge_Submodule_RU.md  004_YAML_Transformation_Library_RU.md  005_ProtoCollab_Architecture_RU.md
examples/: README.md
examples/simple/: ethernet_frame.yaml  ip_scoped_frame.yaml  ip_scoped_packet.yaml  ping_protocol.yaml
scripts/: check_pc_conflicts.sh  validate_commit_message.py
src/jsonschema_validator/: README.md  README_ru.md  factory.py  pyproject.toml
src/jsonschema_validator/backends/: fastjsonschema_backend.py  jsonscreamer_backend.py
src/jsonschema_validator/tests/: test_jsonschema_validator.py  test_public_api.py
src/protocollab/: __init__.py  __main__.py  exceptions.py  main.py  types.py
src/protocollab/core/: models.py
src/protocollab/expression/: __init__.py  ast_nodes.py  evaluator.py  lexer.py  parser.py  validator.py
src/protocollab/generators/: __init__.py  base_generator.py  l3_client.py  l3_server.py  lua_generator.py  mock_client.py  mock_server.py  python_generator.py  utils.py
src/protocollab/generators/templates/lua/: dissector.lua.j2
src/protocollab/generators/templates/python/: l3_client.py.j2  l3_server.py.j2  mock_client.py.j2  mock_server.py.j2  parser.py.j2
src/protocollab/loader/: __init__.py  base_loader.py
src/protocollab/loader/cache/: __init__.py  base_cache.py  memory_cache.py
src/protocollab/tests/: conftest.py  test_cache.py  test_cli.py  test_cli_entrypoints.py  test_core.py  test_expression.py  test_generators.py  test_l3_generators.py  test_loader.py  test_mock_generators.py  test_type_system.py  test_utils.py  test_validation_pipeline.py  test_validator.py
src/protocollab/tests/expression/: test_expression_evaluator.py  test_expression_lexer_parser.py  test_expression_validator.py
src/protocollab/tests/generators/: conftest.py  test_generate_api.py  test_generate_cli.py  test_python_lua_generators.py
src/protocollab/type_system/: primitives.py
src/protocollab/utils/: __init__.py  file_utils.py  yaml_utils.py
src/protocollab/validator/: __init__.py  base_validator.py  expression_validator.py  models.py  pipeline.py  schema_validator.py  semantic_validator.py
src/protocollab/validator/schemas/: base.schema.json  protocol.schema.json
src/yaml_serializer/: README.md  README_ru.md  __init__.py  merge.py  modify.py  pyproject.toml  safe_constructor.py  serializer.py  utils.py
src/yaml_serializer/tests/: __init__.py  conftest.py  test_basic.py  test_core.py  test_coverage.py  test_depth_double_count.py  test_hashing.py  test_include.py  test_include_utils.py  test_integration.py  test_modify.py  test_public_api.py  test_safe_constructor.py  test_security.py  test_session.py  test_utils.py
yaml_serializer/tests/: test_include.py  test_include_utils.py  test_integration.py
