[tool.poetry]
name = "protocollab"
version = "0.1.0"
description = "Protocol specification analyser, validator and code generator"
authors = ["Dmitry Chernikov <d.chernikov@tk-chel.ru>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/cherninkiy/protocollab"
repository = "https://github.com/cherninkiy/protocollab"
keywords = ["protocol", "yaml", "code-generation", "wireshark", "ksy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "yaml_serializer", from = "src" },
    { include = "protocollab",     from = "src" },
]

[tool.poetry.dependencies]
python     = ">=3.10"
ruamel-yaml = ">=0.17.0"
pydantic   = ">=2.0.0"
click      = ">=8.0"
jsonschema = ">=4.0"
jinja2     = ">=3.0"

[tool.poetry.group.dev.dependencies]
pytest      = ">=9.0.0"
pytest-cov  = ">=7.0.0"
pytest-mock = ">=3.15.0"
black       = ">=24.0.0"
flake8      = ">=7.0.0"
mypy        = ">=1.0.0"

[tool.poetry.scripts]
protocollab = "protocollab.main:main"

[build-system]
requires      = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths   = ["src"]
addopts     = "-v --tb=short"

[tool.coverage.run]
source  = ["src"]
omit    = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length    = 100
target-version = ["py310"]

[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true
