[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml-serializer"
version = "1.0.0"
description = "Secure YAML loader/dumper with !include support, change tracking, and round-trip preservation"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Dmitry Chernikov", email = "d.chernikov@tk-chel.ru" },
]
keywords = ["yaml", "serializer", "include", "round-trip", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ruamel-yaml>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/cherninkiy/protocollab"
Repository = "https://github.com/cherninkiy/protocollab"
Source = "https://github.com/cherninkiy/protocollab/tree/main/src/yaml_serializer"

[tool.setuptools]
packages = ["yaml_serializer"]

[tool.setuptools.package-dir]
yaml_serializer = "."